[package]
name    = "cone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cone"
path = "src/main.rs"

[dependencies]
cone-store  = { path = "../cone-store" }
anyhow      = { workspace = true }
clap        = { version = "4", features = ["derive"] }
dialoguer   = "0.11"
serde       = { workspace = true }
serde_json  = { workspace = true }
rand        = { workspace = true }
hex         = { workspace = true }
rusqlite    = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize     = { workspace = true }
