[package]
name    = "cone-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm      = { workspace = true }
argon2       = { workspace = true }
sha2         = { workspace = true }
zeroize      = { workspace = true }
p256         = { workspace = true }
rsa          = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }
hex          = { workspace = true }
base64       = { workspace = true }
rusqlite     = { workspace = true }
pkcs12       = { workspace = true }
pkcs8        = { workspace = true }
x509-cert    = { workspace = true }
pem          = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
p12-keystore = { workspace = true }
age          = { workspace = true }
serde_json   = { workspace = true }