[package]
name    = "coned"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coned"
path = "src/main.rs"

[dependencies]
cone-store = { path = "../cone-store" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }
sha2       = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "ptrace", "signal", "mman", "user"] }